# FossilRecordManager

./: README.md  TODO.md  pyproject.toml
chats/: USE_OF_MODULES.md
docs/adr/: 0001-PosgreSQL-Supabase.md  0002-Poetry.md  0004-Uvicorn.md  0005-DeepSeek.md  0006-FastAPI.md  0007-React-Tailwind.md  template.md
docs/project/: entities.md  ideas.md  stack.md  user_flows.md
docs/us/: US-00_Registration_Login.md  US-01_Create_Resgister.md  US-02_Modify_Records.md  US-03_Search_Records.md  US-04_Scrap_Information.md  US-05_AI_Assistant.md  US-06_Add_Images.md
